force-app/main/default/objects/TelephonyTranscription__e/TelephonyTranscription__e.object-meta.xml
<CustomObject>
    <label>Telephony Transcription</label>
    <pluralLabel>Telephony Transcriptions</pluralLabel>
</CustomObject>