force-app/main/default/objects/TelephonyTranscription__e/fields/CallId__c.field-meta.xml
<CustomField>
    <fullName>CallId__c</fullName>
    <label>Call ID</label>
    <length>40</length>
    <type>Text</type>
    <required>true</required>
</CustomField>