force-app/main/default/objects/TelephonyTranscription__e/fields/CustomerId__c.field-meta.xml
<CustomField>
    <fullName>CustomerId__c</fullName>
    <label>Customer ID</label>
    <length>40</length>
    <type>Text</type>
    <required>true</required>
</CustomField>