force-app/main/default/objects/TelephonyTranscription__e/fields/TranscriptionChunk__c.field-meta.xml
<CustomField>
    <fullName>TranscriptionChunk__c</fullName>
    <label>Transcription Chunk</label>
    <length>255</length>
    <type>Text</type>
    <required>true</required>
</CustomField>