force-app/main/default/objects/TelephonyTranscription__e/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <label>User ID</label>
    <length>18</length>
    <type>Text</type>
    <required>true</required>
</CustomField>